# fastapi-celery-mq-example

./: README.md  app.py  docker-compose.yml  dockerfile  pyproject.toml  worker.py
