[tool.poetry]
name = "fastapi-celery-mq-example"
version = "0.1.0"
description = ""
authors = ["Jeremy Leonardo"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
celery = "^5.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
